Fix incorrect handling of unsigned not null integers

Column attributes are in several places compared to IB_COL_UNSIGNED:

    if (m_col->attr == IB_COL_UNSIGNED)

However, in case when there are any other flags (like IB_COL_NOT_NULL)
set on the column this comparison fails.

Existence of IB_COL_UNSIGNED flag should be always determined by using
binary & operator:

    if (m_col->attr & IB_COL_UNSIGNED)

(This was MySQL bug #75864 and has been fixed in 5.6.26, 5.7.8, 5.8.0 releases.)